tests/cases/errors/process_kind_unsupported/main.sv
module Top;
  always_comb begin end
endmodule
